@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.407 2005/10/08 03:21:07 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.408 2005/10/09 05:48:18 agaffney Exp $
 
 *GLI-0.3 (5 Oct 2005)
+
+  9 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/net/server/gliserv.py:
+  override dict to not be so anal
 
 *GLI-0.2 (5 Oct 2005)
 
